ticket system and ping cmd

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
   "token": "NDY5NjAyNTc2MjI1MjcxODE4.D09q-Q.TbNb8M8Zj8jBuGdss0LlNMpnI8s",
-  "prefix": "+"
+  "prefix": "+",
+  "ticketcategory": "558031322635960382"
 }
