Added +serverinfo and added node-fetch package

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "github:discordjs/discord.js",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "node-fetch": "^2.3.0"
   }
 }
