--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "venom-bot",
   "version": "1.0.0",
-  "description": "A bot to send announcements to the venom announcements server using the API wrapper Discord.js master branch.",
+  "description": "A Discord bot specifically for VenomMC.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
