--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "github:discordjs/discord.js",
+    "dotenv": "^8.0.0",
     "fs": "0.0.1-security",
     "node-fetch": "^2.5.0"
   }
