--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "discord.js": "github:discordjs/discord.js",
     "dotenv": "^8.0.0",
     "fs": "0.0.1-security",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "node-opus": "^0.3.2",
+    "simple-youtube-api": "^5.1.1",
+    "ytdl-core-discord": "^1.0.3"
   }
 }
