Added +ip and the IP of the server in one of the statuses.

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+  "ip": "play.venommc.net",
   "prefix": "+",
   "ticketcategory": "558031322635960382",
   "officialserver": "465976798560256024",
