Added +lock and +unlock. Also added eslint as a dev dependency, as well as simplified code.

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "node-opus": "^0.3.2",
     "simple-youtube-api": "^5.2.1",
     "ytdl-core-discord": "^1.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^6.1.0"
   }
 }
