--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "discord.js": "github:discordjs/discord.js",
     "dotenv": "^8.0.0",
+    "ffmpeg-static": "^2.5.0",
     "fs": "0.0.1-security",
     "node-fetch": "^2.6.0",
     "node-opus": "^0.3.2",
