fix github actions

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Discord bot specifically for VenomMC.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
