--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "discord.js": "github:discordjs/discord.js",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "pg": "^7.17.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
