--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "venom-bot",
   "version": "1.0.0",
   "description": "A Discord bot specifically for VenomMC.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "build": "tsc",
+    "lint": "eslint ./src --ext .ts",
+    "lint:fix": "eslint ./src --ext .ts --fix",
+    "start": "node . --experimental-modules"
   },
   "repository": {
     "type": "git",
@@ -17,13 +19,20 @@
   "author": "Jyguy",
   "license": "Apache-2.0",
   "dependencies": {
-    "discord.js": "github:discordjs/discord.js",
+    "discord.js": "discordjs/discord.js",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
     "node-fetch": "^2.6.0",
-    "pg": "^7.18.2"
+    "pg": "^7.18.2",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "@types/node": "^13.7.7",
+    "@types/node-fetch": "^2.5.5",
+    "@types/pg": "^7.14.1",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.1"
   }
 }
