--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "discord.js": "discordjs/discord.js",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
+    "node-cron": "^2.0.3",
     "node-fetch": "^2.6.0",
     "pg": "^7.18.2",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/node": "^13.9.1",
+    "@types/node-cron": "^2.0.3",
     "@types/node-fetch": "^2.5.5",
     "@types/pg": "^7.14.3",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
