--- a/src/config.json
+++ b/src/config.json
@@ -2,6 +2,11 @@
   "ip": "play.venommc.net",
   "prefix": "+",
   "ticketcategory": "592498370480963624",
+  "noping": [
+    "202556225160871936",
+    "263057430689087489",
+    "396716834725953536"
+  ],
   "officialserver": "465976798560256024",
   "owners": [
     "202556225160871936",
