add separate config for bypassing link filter

--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,9 @@
 {
+  "bypasslink": [
+    "288831103895076867",
+    "202556225160871936",
+    "263057430689087489"
+  ],
   "ip": "play.venommc.net",
   "prefix": "+",
   "ticketcategory": "592498370480963624",
